--- a/index.html
+++ b/index.html
@@ -295,17 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天散步的时候我问老师</p>
-                <p>他离开了生活了19年的昆明会不会舍不得</p>
-                <p>他的妻儿都还在那边</p>
-                <p>他有两个孩子</p>
-                <p>在他博二时就有了第一个孩子</p>
-                <p>他说还好</p>
-                <p>在那边的中科院系统会给孩子很好的教育资源</p>
-                <p>经济方面也不会有压力</p>
-                <p>工作也不会很多</p>
-                <p>就是很稳定</p>
-                <p>我们以后也会过上幸福快乐稳定的生活</p>
+                <p>如果我有好多头发就好了</p>
+                <p>我要为了这个目标奋斗！</p>
+                <p>希望这些药能有用</p>
+                <p>期待我的满头乌发</p>
+                <p>赵瑾也要注意休息</p>
+                <p>不要焦虑，不要压力</p>
+                <p>明天路演加油</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
