--- a/index.html
+++ b/index.html
@@ -295,13 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>如果我有好多头发就好了</p>
-                <p>我要为了这个目标奋斗！</p>
-                <p>希望这些药能有用</p>
-                <p>期待我的满头乌发</p>
-                <p>赵瑾也要注意休息</p>
-                <p>不要焦虑，不要压力</p>
-                <p>明天路演加油</p>
+                <p>国赛一等奖</p>
+                <p>你真是太厉害了</p>
+                <p>好好放松一下把</p>
+                <p>优秀的娃</p>
+                <p>才能欣赏到兰州的美景</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
