--- a/index.html
+++ b/index.html
@@ -295,13 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>赵瑾的三天兰州之旅结束啦</p>
-                <p>收获满满</p>
-                <p>不仅领略了大西北的风光</p>
-                <p>还斩获了生命科学竞赛全国一等奖！</p>
-                <p>有点厉害哦</p>
-                <p>作为大美女的男朋友</p>
-                <p>我也要更加努力才能配得上这么优秀的你</p>
+                <p>我的宝宝真的好优秀</p>
+                <p>刚从兰州回来就在努力的学习了一天</p>
+                <p>真是太勤奋太厉害了</p>
+                <p>很难想象我会有这么自律的宝宝</p>
+                <p>自满一下</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
