--- a/index.html
+++ b/index.html
@@ -295,11 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>我的宝宝真的好优秀</p>
-                <p>刚从兰州回来就在努力的学习了一天</p>
-                <p>真是太勤奋太厉害了</p>
-                <p>很难想象我会有这么自律的宝宝</p>
-                <p>自满一下</p>
+                <p>如果</p>
+                <p>晚霞绕过火车 等着</p>
+                <p>恋人就能猜完</p>
+                <p>彼此 情话</p>
+                <p>今天走过了奈何桥</p>
+                <p>但我没喝孟婆汤</p>
+                <p>也没有忘记你</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
