--- a/index.html
+++ b/index.html
@@ -295,13 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>如果</p>
-                <p>晚霞绕过火车 等着</p>
-                <p>恋人就能猜完</p>
-                <p>彼此 情话</p>
-                <p>今天走过了奈何桥</p>
-                <p>但我没喝孟婆汤</p>
-                <p>也没有忘记你</p>
+                <p>马上就八月了</p>
+                <p>已经过了这么久了</p>
+                <p>完全没有反应过来</p>
+                <p>这两天翻了相册</p>
+                <p>时间过得好快</p>
+                <p>想念我们在一起的时光</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
