--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>马上就八月了</p>
-                <p>已经过了这么久了</p>
-                <p>完全没有反应过来</p>
-                <p>这两天翻了相册</p>
-                <p>时间过得好快</p>
-                <p>想念我们在一起的时光</p>
+                <p>好累。。</p>
+                <p>做了两个星期这个课题了</p>
+                <p>越做越难</p>
+                <p>这几天一点进度都没有</p>
+                <p>保佑我宝宝</p>
+                <p>让我赶快做出来吧</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
