--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>做出来了 这三个星期的工作</p>
-                <p>没有出乎意料的激动</p>
-                <p>因为这只是第一步</p>
-                <p>道阻且长</p>
-                <p>希望你在我身边</p>
-                <p>我们可以一起努力</p>
+                <p>想念你</p>
+                <p>好累啊</p>
+                <p>突然而来的疲惫感</p>
+                <p>想睡觉</p>
+                <p>想抱抱</p>
+                <p>想贴贴</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,4 +326,5 @@
     </script>
 </body>
 </html>
+
 
