--- a/index.html
+++ b/index.html
@@ -295,12 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>想念你</p>
-                <p>好累啊</p>
-                <p>突然而来的疲惫感</p>
-                <p>想睡觉</p>
-                <p>想抱抱</p>
-                <p>想贴贴</p>
+                <p>无语啊啊啊</p>
+                <p>怎么这么难做啊啊啊啊</p>
+                <p>又遇到困难了</p>
+                <p>美美桑内</p>
+                <p>一个劲的粑粑</p>
+                <p>我要疯了</p>
+                <p>但我还是</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,5 +327,6 @@
     </script>
 </body>
 </html>
+
 
 
