--- a/index.html
+++ b/index.html
@@ -295,13 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>无语啊啊啊</p>
-                <p>怎么这么难做啊啊啊啊</p>
-                <p>又遇到困难了</p>
-                <p>美美桑内</p>
-                <p>一个劲的粑粑</p>
-                <p>我要疯了</p>
-                <p>但我还是</p>
+                <p>最近宝宝总是会流血</p>
+                <p>还头晕肩颈不舒服</p>
+                <p>读书压力还大</p>
+                <p>还要兼顾减肥</p>
+                <p>可怜的娃</p>
+                <p>一定要好好睡觉</p>
+                <p>好好吃饭</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -327,6 +327,7 @@
     </script>
 </body>
 </html>
+
 
 
 
