--- a/index.html
+++ b/index.html
@@ -295,16 +295,15 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>最近宝宝总是会流血</p>
-                <p>还头晕肩颈不舒服</p>
-                <p>读书压力还大</p>
-                <p>还要兼顾减肥</p>
-                <p>可怜的娃</p>
-                <p>一定要好好睡觉</p>
-                <p>好好吃饭</p>
-                <p>想你</p>
-                <p>爱你</p>
-                <p>我们已经相爱：<span class="love-days" id="loveDays">0</span> 天</p>
+                <p>Time is passing so quickly now</p>
+                <p>Every day is a routine of three points—work, home, and eat</p>
+                <p>It can be tiring, but I feel fulfilled</p>
+                <p>No matter where I am</p>
+                <p>You are always on my mind</p>
+                <p>I hope you know that</p>
+                <p>I miss you a lot</p>
+                <p>Love you</p>
+                <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
 
@@ -327,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
