--- a/index.html
+++ b/index.html
@@ -295,13 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>Time is passing so quickly now</p>
-                <p>Every day is a routine of three points—work, home, and eat</p>
-                <p>It can be tiring, but I feel fulfilled</p>
-                <p>No matter where I am</p>
-                <p>You are always on my mind</p>
-                <p>I hope you know that</p>
-                <p>I miss you a lot</p>
+                <p>宝宝</p>
+                <p>好累啊</p>
+                <p>不知道你今天过得怎么样</p>
+                <p>我还可以</p>
+                <p>希望你也是</p>
+                <p>想你</p>
                 <p>Love you</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
@@ -326,6 +325,7 @@
     </script>
 </body>
 </html>
+
 
 
 
