--- a/index.html
+++ b/index.html
@@ -295,11 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>宝宝</p>
-                <p>好累啊</p>
-                <p>不知道你今天过得怎么样</p>
-                <p>我还可以</p>
-                <p>希望你也是</p>
+                <p>今天和老师讨论了三个小时</p>
+                <p>讨论的时候我就好担心</p>
+                <p>我的宝宝找不到我会不会害怕</p>
+                <p>结果发现某人好像并不care</p>
+                <p>哼哼</p>
                 <p>想你</p>
                 <p>Love you</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -325,6 +325,7 @@
     </script>
 </body>
 </html>
+
 
 
 
