--- a/index.html
+++ b/index.html
@@ -295,11 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天和老师讨论了三个小时</p>
-                <p>讨论的时候我就好担心</p>
-                <p>我的宝宝找不到我会不会害怕</p>
-                <p>结果发现某人好像并不care</p>
-                <p>哼哼</p>
+                <p>今晚吃饭的时候聊天</p>
+                <p>他们就都说我少年老成</p>
+                <p>夸得我超级不好意思</p>
+                <p>聊了一圈下来我也是现在组里面最小的</p>
+                <p>真是有点神奇</p>
+                <p>回去的时候发现今晚的月圆</p>
+                <p>想起我们一起对诗的时光</p>
+                <p>明月几时有，千里共婵娟</p>
                 <p>想你</p>
                 <p>Love you</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -325,6 +328,7 @@
     </script>
 </body>
 </html>
+
 
 
 
