--- a/index.html
+++ b/index.html
@@ -302,9 +302,10 @@
                 <p>真是有点神奇</p>
                 <p>回去的时候发现今晚的月圆</p>
                 <p>想起我们一起对诗的时光</p>
-                <p>明月几时有，千里共婵娟</p>
+                <p>但愿人长久</p>
+                <p>千里共婵娟</p>
                 <p>想你</p>
-                <p>Love you</p>
+                <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
@@ -328,6 +329,7 @@
     </script>
 </body>
 </html>
+
 
 
 
