--- a/index.html
+++ b/index.html
@@ -295,15 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今晚吃饭的时候聊天</p>
-                <p>他们就都说我少年老成</p>
-                <p>夸得我超级不好意思</p>
-                <p>聊了一圈下来我也是现在组里面最小的</p>
-                <p>真是有点神奇</p>
-                <p>回去的时候发现今晚的月圆</p>
-                <p>想起我们一起对诗的时光</p>
-                <p>但愿人长久</p>
-                <p>千里共婵娟</p>
+                <p>这两天下午到六点多这段时间我就变得好困好累</p>
+                <p>好奇怪</p>
+                <p>想睡觉</p>
+                <p>不知道进入了什么生物钟了</p>
+                <p>还特别想你</p>
+                <p>好疲惫啊</p>
+                <p>特别奇怪的感觉</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -329,6 +327,7 @@
     </script>
 </body>
 </html>
+
 
 
 
