--- a/index.html
+++ b/index.html
@@ -295,13 +295,15 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>这两天下午到六点多这段时间我就变得好困好累</p>
-                <p>好奇怪</p>
-                <p>想睡觉</p>
-                <p>不知道进入了什么生物钟了</p>
-                <p>还特别想你</p>
-                <p>好疲惫啊</p>
-                <p>特别奇怪的感觉</p>
+                <p>审稿结果返回来了</p>
+                <p>虽然要改的东西很多</p>
+                <p>但是至少已经是一个很大的进步了不是吗</p>
+                <p>改稿是一个艰难且漫长的过程</p>
+                <p>好多文章都要改可能超过一年</p>
+                <p>补实验补数据改图改内容等等</p>
+                <p>作为正式发表的一篇严谨的学术论文</p>
+                <p>这些就是必经的过程呀宝宝</p>
+                <p>你一定可以的</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -327,6 +329,7 @@
     </script>
 </body>
 </html>
+
 
 
 
