--- a/index.html
+++ b/index.html
@@ -295,15 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>审稿结果返回来了</p>
-                <p>虽然要改的东西很多</p>
-                <p>但是至少已经是一个很大的进步了不是吗</p>
-                <p>改稿是一个艰难且漫长的过程</p>
-                <p>好多文章都要改可能超过一年</p>
-                <p>补实验补数据改图改内容等等</p>
-                <p>作为正式发表的一篇严谨的学术论文</p>
-                <p>这些就是必经的过程呀宝宝</p>
-                <p>你一定可以的</p>
+                <p>突然好想你</p>
+                <p>变得很感性</p>
+                <p>米斯有啊</p>
+                <p>希望你在身边</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -315,7 +310,7 @@
             <h2>致我最爱的瑾：</h2>
             <p>赵瑾，我想给你一个从未有过信仰的人的忠诚，想给你我那不被时间、欢乐和逆境触动的核心，也想给你我的寂寞、黑暗和我内心的饥渴。</p>
             <p>我看了许多情书，但那些真正感人的，真正能令人深感其中的，往往是那些通讯并不发达，久居异地的情侣们，多数也是在表达对对方的思念，和心里的爱意。</p>
-            <p>我们没有久居异地，但我的思念和爱意不会随着时间淡去，在共同度过的时间里，生活充满了无法言喻的可能性，如加缪笔下的故事一般，每一次的攀登都是追逐着一种超越日常的存在。</p>
+            <p>我们正在经历异地，但我的思念和爱意不会随着时间淡去，在艰难度过的这段时间里，生活充满了无法言喻的可能性，如加缪笔下的故事一般，每一次的攀登都是追逐着一种超越日常的存在。</p>
         </div>
     </div>
 
@@ -329,6 +324,7 @@
     </script>
 </body>
 </html>
+
 
 
 
