--- a/index.html
+++ b/index.html
@@ -295,10 +295,10 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>突然好想你</p>
-                <p>变得很感性</p>
-                <p>米斯有啊</p>
-                <p>希望你在身边</p>
+                <p>今天下午开会开了三个多小时</p>
+                <p>真是头yong眼花</p>
+                <p>明天八点就要起床来上班</p>
+                <p>你猜猜要干啥</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -324,6 +324,7 @@
     </script>
 </body>
 </html>
+
 
 
 
