--- a/index.html
+++ b/index.html
@@ -295,10 +295,15 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天下午开会开了三个多小时</p>
-                <p>真是头yong眼花</p>
-                <p>明天八点就要起床来上班</p>
-                <p>你猜猜要干啥</p>
+                <p>有些腻了突然发现</p>
+                <p>每天就是三点一线</p>
+                <p>今晚散步的时候就觉得</p>
+                <p>索然无味</p>
+                <p>可是又没什么好玩的</p>
+                <p>如果我们在一起</p>
+                <p>我们就可以到处去玩</p>
+                <p>而且我们俩</p>
+                <p>永远都不会腻</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -324,6 +329,7 @@
     </script>
 </body>
 </html>
+
 
 
 
