--- a/index.html
+++ b/index.html
@@ -295,15 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>有些腻了突然发现</p>
-                <p>每天就是三点一线</p>
-                <p>今晚散步的时候就觉得</p>
-                <p>索然无味</p>
-                <p>可是又没什么好玩的</p>
-                <p>如果我们在一起</p>
-                <p>我们就可以到处去玩</p>
-                <p>而且我们俩</p>
-                <p>永远都不会腻</p>
+                <p>现在的课题组真的很好</p>
+                <p>同门们都很友善和睦</p>
+                <p>老师也很优秀亲近</p>
+                <p>要是九月能不离开就好了</p>
+                <p>希望明年回来一切都还一样</p>
+                <p>和我们的爱情一样</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -329,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
