--- a/index.html
+++ b/index.html
@@ -295,12 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>现在的课题组真的很好</p>
-                <p>同门们都很友善和睦</p>
-                <p>老师也很优秀亲近</p>
-                <p>要是九月能不离开就好了</p>
-                <p>希望明年回来一切都还一样</p>
-                <p>和我们的爱情一样</p>
+                <p>今天吃了烤串火锅</p>
+                <p>去了网吧打游戏</p>
+                <p>本来还要看电影</p>
+                <p>但是我不是很想看就没去了</p>
+                <p>玩得很开心</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +325,7 @@
     </script>
 </body>
 </html>
+
 
 
 
