--- a/index.html
+++ b/index.html
@@ -295,11 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天吃了烤串火锅</p>
-                <p>去了网吧打游戏</p>
-                <p>本来还要看电影</p>
-                <p>但是我不是很想看就没去了</p>
-                <p>玩得很开心</p>
+                <p>这两天在做一个很熟悉的事情</p>
+                <p>就是基因家族</p>
+                <p>我准备做一个能够一键完成所有分析的程序</p>
+                <p>但是总是遇到问题</p>
+                <p>希望能解决</p>
+                <p>还有一个事情</p>
+                <p>就是missu</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -325,6 +327,7 @@
     </script>
 </body>
 </html>
+
 
 
 
