--- a/index.html
+++ b/index.html
@@ -295,13 +295,20 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>这两天在做一个很熟悉的事情</p>
-                <p>就是基因家族</p>
-                <p>我准备做一个能够一键完成所有分析的程序</p>
-                <p>但是总是遇到问题</p>
-                <p>希望能解决</p>
-                <p>还有一个事情</p>
-                <p>就是missu</p>
+                <p>还是老大空的话</p>
+                <p>但是我坚信不疑</p>
+                <p>有希望的事情</p>
+                <p>有可能做到的事情</p>
+                <p>有必要去做的事情</p>
+                <p>就坚持去做</p>
+                <p>不要半途而废</p>
+                <p>不要怀疑自己</p>
+                <p>只要向着那个有光的地方前进就好</p>
+                <p>累的时候想得远一点</p>
+                <p>想想考上后的生活</p>
+                <p>想想考上后回忆的感受</p>
+                <p>把尺度放大些</p>
+                <p>就不会害怕了</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -327,6 +334,7 @@
     </script>
 </body>
 </html>
+
 
 
 
