--- a/index.html
+++ b/index.html
@@ -295,20 +295,21 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>还是老大空的话</p>
-                <p>但是我坚信不疑</p>
-                <p>有希望的事情</p>
-                <p>有可能做到的事情</p>
-                <p>有必要去做的事情</p>
-                <p>就坚持去做</p>
-                <p>不要半途而废</p>
-                <p>不要怀疑自己</p>
-                <p>只要向着那个有光的地方前进就好</p>
-                <p>累的时候想得远一点</p>
-                <p>想想考上后的生活</p>
-                <p>想想考上后回忆的感受</p>
-                <p>把尺度放大些</p>
-                <p>就不会害怕了</p>
+                <p>2：41被不知道什么东西要了好多包</p>
+                <p>又痒又难受，还睡不着</p>
+                <p>4.41从梦中惊醒</p>
+                <p>梦里一直在蓄势待发，准备杀蚊子</p>
+                <p>然后就惊醒了</p>
+                <p>结果找了一圈还是没有</p>
+                <p>9.30我睡醒了，和宝宝换了头像</p>
+                <p>顶呱呱</p>
+                <p>11：43宝宝也换了头像</p>
+                <p>我们又是情头了</p>
+                <p>12：40吃了午饭</p>
+                <p>香锅特别咸，咸的吃到头晕</p>
+                <p>18：44吃了400块的晚饭</p>
+                <p>21：18更新完成</p>
+                <p>0：00-24：00</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -334,6 +335,7 @@
     </script>
 </body>
 </html>
+
 
 
 
