--- a/index.html
+++ b/index.html
@@ -295,21 +295,16 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>2：41被不知道什么东西要了好多包</p>
-                <p>又痒又难受，还睡不着</p>
-                <p>4.41从梦中惊醒</p>
-                <p>梦里一直在蓄势待发，准备杀蚊子</p>
-                <p>然后就惊醒了</p>
-                <p>结果找了一圈还是没有</p>
-                <p>9.30我睡醒了，和宝宝换了头像</p>
-                <p>顶呱呱</p>
-                <p>11：43宝宝也换了头像</p>
-                <p>我们又是情头了</p>
-                <p>12：40吃了午饭</p>
-                <p>香锅特别咸，咸的吃到头晕</p>
-                <p>18：44吃了400块的晚饭</p>
-                <p>21：18更新完成</p>
-                <p>0：00-24：00</p>
+                <p>我的程序已经写好咯</p>
+                <p>明天再整合一下就可以了</p>
+                <p>今天我要早早下班</p>
+                <p>休息一下</p>
+                <p>今天是平常的一天</p>
+                <p>没什么特别的</p>
+                <p>又换了一个头像</p>
+                <p>打了一会球</p>
+                <p>想了一天小赵赵</p>
+                <p>今天讲什么故事呢</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -335,6 +330,7 @@
     </script>
 </body>
 </html>
+
 
 
 
