--- a/index.html
+++ b/index.html
@@ -295,16 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>我的程序已经写好咯</p>
-                <p>明天再整合一下就可以了</p>
-                <p>今天我要早早下班</p>
-                <p>休息一下</p>
-                <p>今天是平常的一天</p>
-                <p>没什么特别的</p>
-                <p>又换了一个头像</p>
-                <p>打了一会球</p>
-                <p>想了一天小赵赵</p>
-                <p>今天讲什么故事呢</p>
+                <p>测试阶段</p>
+                <p>现在在超算上测试</p>
+                <p>有一些小问题</p>
+                <p>已经接近最终成果了</p>
+                <p>开心</p>
+                <p>传递给你</p>
+                <p>加油</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -330,6 +327,7 @@
     </script>
 </body>
 </html>
+
 
 
 
