--- a/index.html
+++ b/index.html
@@ -295,13 +295,15 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>测试阶段</p>
-                <p>现在在超算上测试</p>
-                <p>有一些小问题</p>
-                <p>已经接近最终成果了</p>
-                <p>开心</p>
-                <p>传递给你</p>
-                <p>加油</p>
+                <p>9：31 我醒了，睡得很好</p>
+                <p>9：45 我变成小猪</p>
+                <p>12：11 宝宝的阅读全对</p>
+                <p>12：37 宝宝的饭看起来不是很好吃</p>
+                <p>14：12 宝宝吃水果</p>
+                <p>15：01 宝宝的肚子疼，我心疼</p>
+                <p>16：01和16：57 我和宝宝拉拉</p>
+                <p>18：55 和同门一起吃饭</p>
+                <p>20：30 完成更新</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -327,6 +329,7 @@
     </script>
 </body>
 </html>
+
 
 
 
