--- a/index.html
+++ b/index.html
@@ -295,15 +295,15 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>9：31 我醒了，睡得很好</p>
-                <p>9：45 我变成小猪</p>
-                <p>12：11 宝宝的阅读全对</p>
-                <p>12：37 宝宝的饭看起来不是很好吃</p>
-                <p>14：12 宝宝吃水果</p>
-                <p>15：01 宝宝的肚子疼，我心疼</p>
-                <p>16：01和16：57 我和宝宝拉拉</p>
-                <p>18：55 和同门一起吃饭</p>
-                <p>20：30 完成更新</p>
+                <p>今天在家里玩了一天</p>
+                <p>晚上才来上班</p>
+                <p>修好了小网站</p>
+                <p>恢复更新噜</p>
+                <p>处暑</p>
+                <p>宜辞旧迎新</p>
+                <p>忌伤感悲秋</p>
+                <p>我今天丢了好多垃圾</p>
+                <p>祝福我们迎接新的未来吧</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -329,6 +329,7 @@
     </script>
 </body>
 </html>
+
 
 
 
