--- a/index.html
+++ b/index.html
@@ -295,15 +295,16 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天在家里玩了一天</p>
-                <p>晚上才来上班</p>
-                <p>修好了小网站</p>
-                <p>恢复更新噜</p>
-                <p>处暑</p>
-                <p>宜辞旧迎新</p>
-                <p>忌伤感悲秋</p>
-                <p>我今天丢了好多垃圾</p>
-                <p>祝福我们迎接新的未来吧</p>
+                <p>玩了好久的游戏啊</p>
+                <p>好久没这么玩了</p>
+                <p>在回来的路上</p>
+                <p>一起去的同门说</p>
+                <p>今天玩了这么久</p>
+                <p>却没有和以前一样的快乐了</p>
+                <p>我说</p>
+                <p>这就和他那把游戏里的枪的名字一样</p>
+                <p>花有重开日</p>
+                <p>人无再少年</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -329,6 +330,7 @@
     </script>
 </body>
 </html>
+
 
 
 
