--- a/index.html
+++ b/index.html
@@ -295,16 +295,15 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>玩了好久的游戏啊</p>
-                <p>好久没这么玩了</p>
-                <p>在回来的路上</p>
-                <p>一起去的同门说</p>
-                <p>今天玩了这么久</p>
-                <p>却没有和以前一样的快乐了</p>
-                <p>我说</p>
-                <p>这就和他那把游戏里的枪的名字一样</p>
-                <p>花有重开日</p>
-                <p>人无再少年</p>
+                <p>今天又完善了一下</p>
+                <p>现在可以一次性跑完任意数目的物种的家族了</p>
+                <p>超级厉害</p>
+                <p>嘿嘿</p>
+                <p>我发现现在时间过的越来越快了</p>
+                <p>这一天里我对时间流逝的感知逐渐减弱</p>
+                <p>每一天过的都很快</p>
+                <p>或许一眨眼</p>
+                <p>我们就不异地了</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -330,6 +329,7 @@
     </script>
 </body>
 </html>
+
 
 
 
