--- a/index.html
+++ b/index.html
@@ -295,15 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天又完善了一下</p>
-                <p>现在可以一次性跑完任意数目的物种的家族了</p>
-                <p>超级厉害</p>
-                <p>嘿嘿</p>
-                <p>我发现现在时间过的越来越快了</p>
-                <p>这一天里我对时间流逝的感知逐渐减弱</p>
-                <p>每一天过的都很快</p>
-                <p>或许一眨眼</p>
-                <p>我们就不异地了</p>
+                <p>因为每天都会更新</p>
+                <p>现在这个网站被认为热度非常高</p>
+                <p>只要搜fandunjin</p>
+                <p>第一个就会跳出来我们的这个网站</p>
+                <p>我们也是人尽皆知的恩爱小情侣了</p>
+                <p>(●ˇ∀ˇ●)</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -329,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
