--- a/index.html
+++ b/index.html
@@ -295,11 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>因为每天都会更新</p>
-                <p>现在这个网站被认为热度非常高</p>
-                <p>只要搜fandunjin</p>
-                <p>第一个就会跳出来我们的这个网站</p>
-                <p>我们也是人尽皆知的恩爱小情侣了</p>
+                <p>是谁综测第一啊</p>
+                <p>原来是我的大宝宝</p>
+                <p>3000到账</p>
+                <p>嘻嘻</p>
+                <p>和老婆一起吃香的喝辣的</p>
                 <p>(●ˇ∀ˇ●)</p>
                 <p>想你</p>
                 <p>爱你</p>
@@ -326,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
