--- a/index.html
+++ b/index.html
@@ -295,11 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>是谁综测第一啊</p>
-                <p>原来是我的大宝宝</p>
-                <p>3000到账</p>
-                <p>嘻嘻</p>
-                <p>和老婆一起吃香的喝辣的</p>
+                <p>马上就要开学了</p>
+                <p>好紧张啊</p>
+                <p>不知道啥时候发工资</p>
+                <p>已经要吃土了</p>
+                <p>今天酣畅淋漓的运动了</p>
                 <p>(●ˇ∀ˇ●)</p>
                 <p>想你</p>
                 <p>爱你</p>
@@ -326,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
