--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>马上就要开学了</p>
-                <p>好紧张啊</p>
-                <p>不知道啥时候发工资</p>
-                <p>已经要吃土了</p>
-                <p>今天酣畅淋漓的运动了</p>
-                <p>(●ˇ∀ˇ●)</p>
+                <p>七夕快乐呀</p>
+                <p>今天是我们小情侣的节日</p>
+                <p>可惜我们不在一起</p>
+                <p>没办法一起玩一起吃</p>
+                <p>等以后条件允许了</p>
+                <p>我们不要再错过每一个节日</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
