--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>七夕快乐呀</p>
-                <p>今天是我们小情侣的节日</p>
-                <p>可惜我们不在一起</p>
-                <p>没办法一起玩一起吃</p>
-                <p>等以后条件允许了</p>
-                <p>我们不要再错过每一个节日</p>
+                <p>今天整完了初稿</p>
+                <p>准备下周就投出去啦</p>
+                <p>开始期待去北京的生活了</p>
+                <p>很大的可能是单人间</p>
+                <p>开心开心，期待期待</p>
+                <p>工作了两个月再重返校园确实有不一样的感受</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
