--- a/index.html
+++ b/index.html
@@ -295,12 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天整完了初稿</p>
-                <p>准备下周就投出去啦</p>
-                <p>开始期待去北京的生活了</p>
-                <p>很大的可能是单人间</p>
-                <p>开心开心，期待期待</p>
-                <p>工作了两个月再重返校园确实有不一样的感受</p>
+                <p>明天又是新的一周</p>
+                <p>还是新的一个月！</p>
+                <p>天啊</p>
+                <p>太快了太快了</p>
+                <p>恭喜你的文章accept了</p>
+                <p>全力准备考研！</p>
+                <p>加油</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +327,7 @@
     </script>
 </body>
 </html>
+
 
 
 
