--- a/index.html
+++ b/index.html
@@ -295,13 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>明天又是新的一周</p>
-                <p>还是新的一个月！</p>
-                <p>天啊</p>
-                <p>太快了太快了</p>
-                <p>恭喜你的文章accept了</p>
-                <p>全力准备考研！</p>
-                <p>加油</p>
+                <p>勤劳的小蜜蜂呀</p>
+                <p>飞到花丛中</p>
+                <p>又是劳动的一天</p>
+                <p>收获满满</p>
+                <p>不知道大宝宝是不是也是呢</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -327,6 +325,7 @@
     </script>
 </body>
 </html>
+
 
 
 
