--- a/index.html
+++ b/index.html
@@ -295,11 +295,11 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>下周一要讲文献</p>
-                <p>好累</p>
-                <p>现在手上有好多活</p>
-                <p>还要忙好多事情</p>
-                <p>累累</p>
+                <p>已经忙到忘记更新</p>
+                <p>这是补更</p>
+                <p>哪怕没有更新</p>
+                <p>我也时刻挂念你</p>
+                <p>大宝宝</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -325,6 +325,7 @@
     </script>
 </body>
 </html>
+
 
 
 
