--- a/index.html
+++ b/index.html
@@ -295,13 +295,21 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>已经忙到忘记更新</p>
-                <p>这是补更</p>
-                <p>哪怕没有更新</p>
-                <p>我也时刻挂念你</p>
-                <p>大宝宝</p>
-                <p>想你</p>
-                <p>爱你</p>
+                <p>北方的气候严格遵循着节气</p>
+                <p>处暑一过，便转凉了</p>
+                <p>深夜一个人回家时</p>
+                <p>微风再不似夏天般潮热</p>
+                <p>忍不住感叹</p>
+                <p>该披上外套了</p>
+                <p>过几日就是白露</p>
+                <p>我印象很深</p>
+                <p>每每到了这个时候总会下雨</p>
+                <p>那是一场秋雨</p>
+                <p>真正的宣告秋天来临</p>
+                <p>都说男生在秋天会更容易悲秋</p>
+                <p>我的情绪确实低落了些许</p>
+                <p>吹着微冷的秋风</p>
+                <p>我想你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
@@ -325,6 +333,7 @@
     </script>
 </body>
 </html>
+
 
 
 
