--- a/index.html
+++ b/index.html
@@ -295,21 +295,22 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>北方的气候严格遵循着节气</p>
-                <p>处暑一过，便转凉了</p>
-                <p>深夜一个人回家时</p>
-                <p>微风再不似夏天般潮热</p>
-                <p>忍不住感叹</p>
-                <p>该披上外套了</p>
-                <p>过几日就是白露</p>
-                <p>我印象很深</p>
-                <p>每每到了这个时候总会下雨</p>
-                <p>那是一场秋雨</p>
-                <p>真正的宣告秋天来临</p>
-                <p>都说男生在秋天会更容易悲秋</p>
-                <p>我的情绪确实低落了些许</p>
-                <p>吹着微冷的秋风</p>
-                <p>我想你</p>
+                <p>今天在家窝了半天</p>
+                <p>中午吃了三人份的麦当劳</p>
+                <p>晚上喝了一杯库迪</p>
+                <p>现在有点饿</p>
+                <p>希望体重可以抵消</p>
+                <p>下午五点才来的工位</p>
+                <p>满打满算今天干了5h左右吧</p>
+                <p>效率还挺高的</p>
+                <p>干的很舒服</p>
+                <p>果然还是怎么舒服怎么来会更舒服</p>
+                <p>废话一句</p>
+                <p>如果我想你了就能见到你就好了</p>
+                <p>多么希望这不是废话</p>
+                <p>这是我们的以后</p>
+                <p>想你</p>
+                <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
@@ -333,6 +334,7 @@
     </script>
 </body>
 </html>
+
 
 
 
