--- a/index.html
+++ b/index.html
@@ -295,20 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天在家窝了半天</p>
-                <p>中午吃了三人份的麦当劳</p>
-                <p>晚上喝了一杯库迪</p>
-                <p>现在有点饿</p>
-                <p>希望体重可以抵消</p>
-                <p>下午五点才来的工位</p>
-                <p>满打满算今天干了5h左右吧</p>
-                <p>效率还挺高的</p>
-                <p>干的很舒服</p>
-                <p>果然还是怎么舒服怎么来会更舒服</p>
-                <p>废话一句</p>
-                <p>如果我想你了就能见到你就好了</p>
-                <p>多么希望这不是废话</p>
-                <p>这是我们的以后</p>
+                <p>组里买了好多花花草草</p>
+                <p>还做了介绍课题组的海报</p>
+                <p>准备迎接下周来的领导</p>
+                <p>真是热闹</p>
+                <p>来了一批又一批</p>
+                <p>不知道我的宝宝</p>
+                <p>什么时候来呢</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -334,6 +327,7 @@
     </script>
 </body>
 </html>
+
 
 
 
