--- a/index.html
+++ b/index.html
@@ -295,13 +295,14 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>组里买了好多花花草草</p>
-                <p>还做了介绍课题组的海报</p>
-                <p>准备迎接下周来的领导</p>
-                <p>真是热闹</p>
-                <p>来了一批又一批</p>
-                <p>不知道我的宝宝</p>
-                <p>什么时候来呢</p>
+                <p>血月！</p>
+                <p>泰山有一条河叫奈河</p>
+                <p>是连接地府的地方</p>
+                <p>昨天还是中元节！</p>
+                <p>超级超级阴森</p>
+                <p>昨天晚上凉风一阵阵</p>
+                <p>吓人</p>
+                <p>今晚我就要直面恐惧！</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -327,6 +328,7 @@
     </script>
 </body>
 </html>
+
 
 
 
