--- a/index.html
+++ b/index.html
@@ -295,14 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>血月！</p>
-                <p>泰山有一条河叫奈河</p>
-                <p>是连接地府的地方</p>
-                <p>昨天还是中元节！</p>
-                <p>超级超级阴森</p>
-                <p>昨天晚上凉风一阵阵</p>
-                <p>吓人</p>
-                <p>今晚我就要直面恐惧！</p>
+                <p>临近了离开的日子了</p>
+                <p>很奇怪的是</p>
+                <p>一个星期前我是不舍离开的</p>
+                <p>但是越到这个时候</p>
+                <p>我越来越期待远行</p>
+                <p>和我们分别的时候不同</p>
+                <p>我要继续赶路了</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -328,6 +327,7 @@
     </script>
 </body>
 </html>
+
 
 
 
