--- a/index.html
+++ b/index.html
@@ -295,13 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>临近了离开的日子了</p>
-                <p>很奇怪的是</p>
-                <p>一个星期前我是不舍离开的</p>
-                <p>但是越到这个时候</p>
-                <p>我越来越期待远行</p>
-                <p>和我们分别的时候不同</p>
-                <p>我要继续赶路了</p>
+                <p>紧张的想拉屎</p>
+                <p>明天要早起</p>
+                <p>紧张紧张</p>
+                <p>还有活没干完</p>
+                <p>紧张紧张</p>
+                <p>想你想你</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -327,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
