--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>紧张的想拉屎</p>
-                <p>明天要早起</p>
-                <p>紧张紧张</p>
-                <p>还有活没干完</p>
-                <p>紧张紧张</p>
-                <p>想你想你</p>
+                <p>今天是教师节</p>
+                <p>朋友圈好多老师都发了他们收到的礼物和祝福</p>
+                <p>有一些曾经的同学也已经是老师了</p>
+                <p>也使祝他们教师节快乐了</p>
+                <p>不知道我们的教师节什么时候能开始过呢</p>
+                <p>嘿嘿</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
