--- a/index.html
+++ b/index.html
@@ -295,12 +295,20 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>peking好大啊</p>
-                <p>吃个饭跑了一个小时</p>
-                <p>好多警察</p>
-                <p>真的是政治中心</p>
-                <p>很多历史的痕迹</p>
-                <p>半部现代发展史</p>
+                <p>当我收拾好东西坐在宿舍时</p>
+                <p>真的很感慨</p>
+                <p>单人宿舍</p>
+                <p>是从来都没有想过的</p>
+                <p>在这样一个红砖铺遍学校里</p>
+                <p>在身边同学都是名校毕业的环境里</p>
+                <p>走几步就会遇到各国的留学生</p>
+                <p>我也从没想过自己会是其中的一员</p>
+                <p>我意识到</p>
+                <p>确实有什么不一样了</p>
+                <p>可是北京确实是雾霾霾的</p>
+                <p>可是这里依山傍水</p>
+                <p>可是还是北京</p>
+                <p>可是我却很喜欢</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -326,6 +334,7 @@
     </script>
 </body>
 </html>
+
 
 
 
