--- a/index.html
+++ b/index.html
@@ -295,20 +295,16 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>当我收拾好东西坐在宿舍时</p>
-                <p>真的很感慨</p>
-                <p>单人宿舍</p>
-                <p>是从来都没有想过的</p>
-                <p>在这样一个红砖铺遍学校里</p>
-                <p>在身边同学都是名校毕业的环境里</p>
-                <p>走几步就会遇到各国的留学生</p>
-                <p>我也从没想过自己会是其中的一员</p>
-                <p>我意识到</p>
-                <p>确实有什么不一样了</p>
-                <p>可是北京确实是雾霾霾的</p>
-                <p>可是这里依山傍水</p>
-                <p>可是还是北京</p>
-                <p>可是我却很喜欢</p>
+                <p>今天就是莫名其妙的不耐烦</p>
+                <p>干啥都难受</p>
+                <p>可能是大姨夫来了</p>
+                <p>中午没睡好</p>
+                <p>和体检了可能也有关系</p>
+                <p>头发酷酷酷一直掉</p>
+                <p>想打球结果下雨了</p>
+                <p>希望明天不要再这样了</p>
+                <p>还好有你在</p>
+                <p>一视频就没事了</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -334,6 +330,7 @@
     </script>
 </body>
 </html>
+
 
 
 
