--- a/index.html
+++ b/index.html
@@ -295,16 +295,13 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>今天就是莫名其妙的不耐烦</p>
-                <p>干啥都难受</p>
-                <p>可能是大姨夫来了</p>
-                <p>中午没睡好</p>
-                <p>和体检了可能也有关系</p>
-                <p>头发酷酷酷一直掉</p>
-                <p>想打球结果下雨了</p>
-                <p>希望明天不要再这样了</p>
-                <p>还好有你在</p>
-                <p>一视频就没事了</p>
+                <p>一个人的生活</p>
+                <p>这几天都没睡好</p>
+                <p>然后肚脐这又不知道啥情况</p>
+                <p>有点难受</p>
+                <p>但又享受这一个人的生活</p>
+                <p>什么事都没有</p>
+                <p>好不习惯</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -330,6 +327,7 @@
     </script>
 </body>
 </html>
+
 
 
 
