--- a/index.html
+++ b/index.html
@@ -295,13 +295,16 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>一个人的生活</p>
-                <p>这几天都没睡好</p>
-                <p>然后肚脐这又不知道啥情况</p>
-                <p>有点难受</p>
-                <p>但又享受这一个人的生活</p>
-                <p>什么事都没有</p>
-                <p>好不习惯</p>
+                <p>北京市区内是看不到山的</p>
+                <p>往北走，雁栖湖可以看到远处的山</p>
+                <p>有一座很像五虎山</p>
+                <p>五虎山的形状特别有特点</p>
+                <p>在山脊的尽头突然的90°悬崖，垂直落下</p>
+                <p>五虎山的背后是福清</p>
+                <p>而这边这座山的背后是河北，内蒙</p>
+                <p>还是青山看了舒服</p>
+                <p>抬头若是灰蒙蒙的一篇无尽</p>
+                <p>怎么望得到头啊</p>
                 <p>想你</p>
                 <p>爱你</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -327,6 +330,7 @@
     </script>
 </body>
 </html>
+
 
 
 
