--- a/index.html
+++ b/index.html
@@ -295,18 +295,17 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>北京市区内是看不到山的</p>
-                <p>往北走，雁栖湖可以看到远处的山</p>
-                <p>有一座很像五虎山</p>
-                <p>五虎山的形状特别有特点</p>
-                <p>在山脊的尽头突然的90°悬崖，垂直落下</p>
-                <p>五虎山的背后是福清</p>
-                <p>而这边这座山的背后是河北，内蒙</p>
-                <p>还是青山看了舒服</p>
-                <p>抬头若是灰蒙蒙的一篇无尽</p>
-                <p>怎么望得到头啊</p>
-                <p>想你</p>
-                <p>爱你</p>
+                <p>Bonjour</p>
+                <p>Quand j'apprenais l'anglais autrefois, je n'avais pas d'idée particulière</p>
+                <p>j'apprenais juste de manière naïve</p>
+                <p>Au fil du temps, j'aime de moins en moins cela et mes notes sont très mauvaises</p>
+                <p>À l'université, mes notes ont de nouveau augmenté et j'ai commencé à aimer l'anglais</p>
+                <p>Une langue a effectivement son charme unique</p>
+                <p>Maintenant, j'ai de l'intérêt et de la motivation pour apprendre de lui</p>
+                <p>Comme je t'aime</p>
+                <p>Toujours enthousiaste</p>
+                <p>Je pense à toi</p>
+                <p>Je t'aime</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
@@ -330,6 +329,7 @@
     </script>
 </body>
 </html>
+
 
 
 
