--- a/index.html
+++ b/index.html
@@ -295,15 +295,12 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>Bonjour</p>
-                <p>Quand j'apprenais l'anglais autrefois, je n'avais pas d'idée particulière</p>
-                <p>j'apprenais juste de manière naïve</p>
-                <p>Au fil du temps, j'aime de moins en moins cela et mes notes sont très mauvaises</p>
-                <p>À l'université, mes notes ont de nouveau augmenté et j'ai commencé à aimer l'anglais</p>
-                <p>Une langue a effectivement son charme unique</p>
-                <p>Maintenant, j'ai de l'intérêt et de la motivation pour apprendre de lui</p>
-                <p>Comme je t'aime</p>
-                <p>Toujours enthousiaste</p>
+                <p>运动真的能让人感到快乐呀</p>
+                <p>我今天跑椭圆仪的时候就觉得自己年轻了十岁</p>
+                <p>所以我要坚持运动了</p>
+                <p>你也要坚持</p>
+                <p>无论学习还是运动</p>
+                <p>加油</p>
                 <p>Je pense à toi</p>
                 <p>Je t'aime</p>
                 <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
@@ -329,6 +326,7 @@
     </script>
 </body>
 </html>
+
 
 
 
