--- a/index.html
+++ b/index.html
@@ -295,15 +295,17 @@
         <div class="timer-container">
             <div class="timer-content">
                 <h2>❤️ LOVE YOU ❤️</h2>
-                <p>运动真的能让人感到快乐呀</p>
-                <p>我今天跑椭圆仪的时候就觉得自己年轻了十岁</p>
-                <p>所以我要坚持运动了</p>
-                <p>你也要坚持</p>
-                <p>无论学习还是运动</p>
-                <p>加油</p>
-                <p>Je pense à toi</p>
-                <p>Je t'aime</p>
-                <p>We have fall in love：<span class="love-days" id="loveDays">0</span> 天</p>
+                <p>我感觉我可能有点水土不服</p>
+                <p>这几天晚上都没睡好</p>
+                <p>很难入睡</p>
+                <p>一闭眼就好多奇奇怪怪的念头</p>
+                <p>如何又是肚脐流血</p>
+                <p>现在又是牙龈肿</p>
+                <p>不知道是上火还是咋</p>
+                <p>身体也不得劲</p>
+                <p>想你</p>
+                <p>爱你</p>
+                <p>365+364：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
 
@@ -326,6 +328,7 @@
     </script>
 </body>
 </html>
+
 
 
 
