--- a/index.html
+++ b/index.html
@@ -299,13 +299,13 @@
                 <p>这几天晚上都没睡好</p>
                 <p>很难入睡</p>
                 <p>一闭眼就好多奇奇怪怪的念头</p>
-                <p>如何又是肚脐流血</p>
+                <p>又是肚脐流血</p>
                 <p>现在又是牙龈肿</p>
                 <p>不知道是上火还是咋</p>
                 <p>身体也不得劲</p>
                 <p>想你</p>
                 <p>爱你</p>
-                <p>365+364：<span class="love-days" id="loveDays">0</span> 天</p>
+                <p>365+364=？：<span class="love-days" id="loveDays">0</span> 天</p>
             </div>
         </div>
 
@@ -328,6 +328,7 @@
     </script>
 </body>
 </html>
+
 
 
 
